fix: increase margin-left for last updated text for better alignment

--- a/app/Vehicle/static/css/vehicle.css
+++ b/app/Vehicle/static/css/vehicle.css
@@ -531,7 +531,7 @@ input:checked + .slider:before {
 .last-updated-sub{
   font-family: Arial, sans-serif;
   font-size: 12px;
-  margin-left: 25px;
+  margin-left: 30px;
 }
 
 .vehicle-status {
